--- a/data/homepage.yml
+++ b/data/homepage.yml
@@ -1,122 +1,275 @@
 # homepage
 homepage:
   head:
-    title: "Home | Raditian"
+    title: "Vedeme solární misi!"
 # showcase
 showcase:
   enable: true
-  title: "Hello, I’m Andreas."
-  subtitle: "Front-End Developer"
-  description: "I work at <a target='_blank' href='https://radity.com/'>Radity</a>, a software development company in Switzerland. And I am a Raditian. You get the idea where theme name comes from. Keep cool, stay in touch. You can download this theme from <a target='_blank' href='https://github.com/radity/raditian-free-hugo-theme'>github</a>."
+  title: "Šetříte planetu i finance?"
+  subtitle: "Vedeme solární misi!"
+  description: "Pomáháme lidem a firmám ušetřit peníze i planetu, zařízujeme realizaci na klíč i s dotací. 
+  Lorem ipsum dolor sit ametel, consectetuer adipiscing elit. Nam quis nulla."
   image:
-    alt: "Showcase keyboard and mouse image"
+    alt: "Solární mise"
     x: "img/showcase/showcase.png"
     _2x: "img/showcase/showcase@2x.png"
   imageMobile:
-    alt: "Showcase keyboard and mouse image"
-    x: "img/showcase/showcase-mobile.jpg"
+    alt: "Solární mise"
+    x: "img/showcase/showcase-mobile.png"
 
   button:
-    icon: "icon-mail-fill"
-    btnText: "Contact"
-    URL: "https://radity.com/en/contact/"
+    icon: ""
+    btnText: "PRO FIRMY"
+    URL: "/#firmy"
+  
+  button2:
+    icon: ""
+    btnText: "PRO DOMY"
+    URL: "/#domy"
 
   socialLinks:
-    - icon: "linkedin"
-      URL: "https://www.linkedin.com/company/radity/"
-
-    - icon: "github"
-      URL: "https://github.com/radity"
-
     - icon: "twitter"
-      URL: "https://twitter.com/radity"
-
-    - icon: "dribbble"
-      URL: "https://dribbble.com/radity"
-
-    - icon: "behance"
-      URL: "https://www.behance.net/radity-digital"
+      URL: "/"
 
     - icon: "youtube"
-      URL: "https://www.youtube.com/channel/UCojEc6SPO-W1_CoeHhK9-Zw"
+      URL: "/"
 
     - icon: "instagram"
-      URL: "https://www.instagram.com/teamradity/"
+      URL: "/"
 
     - icon: "facebook"
-      URL: "https://www.facebook.com/raditycom/"
+      URL: "/"
 
-    - icon: "codepen"
-      URL: "#"
-
-    - icon: "yelp"
-      URL: "https://www.yelp.com/"
-
-# about
-about:
+# firmy
+firmy:
   enable: true
-  title: "Who am I?"
+  title: "Firmy"
   content: '<p class="lead">
-    I am back, after a few days of vacationing with family. Weather was awesome, the beach was
-    full of nasty jelly-fish, yuk! All-in-all, life has been good. I hope life has been as
-    good for all of you.
+    Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Nam quis nulla. 
+    Curabitur bibendum justo non orci. Duis viverra diam non justo. 
+    Phasellus et lorem id felis nonummy placerat. 
+    Vestibulum erat nulla, ullamcorper nec, rutrum non, nonummy ac, erat. 
     </p>
     <p class="lead">
-    My area of focus lies in designing web and mobile products, user research as well as
-    leading of design & front-end teams. I enjoy designing and coding the UI as much as
-    talking with users to iterate and improve the experiences that reach business goals.
+    Praesent id justo in neque elementum ultrices. Etiam neque. Proin mattis lacinia justo. 
+    Nullam sit amet magna in magna gravida vehicula. 
     </p>'
   button:
     icon: "icon-smile-fill"
-    btnText: "About Me"
-    URL: "https://www.linkedin.com/company/radity/"
+    btnText: "Kontaktujte nás"
+    URL: ""
   image:
-    x: "img/who-am-i/user-picture.png"
-    _2x: "img/who-am-i/user-picture@2x.png"
+    x: "img/firmy/firmy.png"
+    _2x: "img/firmy/firmy@2x.png"
 
-# education
-education:
+# nabidka
+firmy_nabidka:
   enable: true
-  title: "Education"
+  title: "Příklady nabídek"
   items:
-    - university: "University of Waterloo"
-      year: "2012-2017"
-      degree: "Bachelor of Applied Science (BASc), Electrical Engineering"
+    - name: "výsledná cena:"
+      position: "20 000 Kč"
+      content: "Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Nam quis nulla. Curabitur bibendum justo non orci. 
+      Duis viverra diam non justo. Phasellus et lorem id felis nonummy placerat. 
+      Vestibulum erat nulla, ullamcorper nec, rutrum non, nonummy ac, erat. Praesent id justo in neque elementum ultrices. 
+      Etiam neque. Proin mattis lacinia justo."
+      image:
+        x: ""
+        _2x: ""
 
-    - university: "Sir John A Macdonald CI"
-      year: "2009-2012"
-      degree: "High School Diploma, Sciences, Math, Computer & Business Studies"
+    - name: "výsledná cena:"
+      position: "150 000 Kč"
+      content: "Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Nam quis nulla. Curabitur bibendum justo non orci. 
+      Duis viverra diam non justo. Phasellus et lorem id felis nonummy placerat. 
+      Vestibulum erat nulla, ullamcorper nec, rutrum non, nonummy ac, erat. Praesent id justo in neque elementum ultrices. 
+      Etiam neque. Proin mattis lacinia justo."
+      image:
+        x: ""
+        _2x: ""
 
-# experience
-experience:
+    - name: "výsledná cena:"
+      position: "600 000 Kč"
+      content: "Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Nam quis nulla. Curabitur bibendum justo non orci. 
+      Duis viverra diam non justo. Phasellus et lorem id felis nonummy placerat. 
+      Vestibulum erat nulla, ullamcorper nec, rutrum non, nonummy ac, erat. Praesent id justo in neque elementum ultrices. 
+      Etiam neque. Proin mattis lacinia justo."
+      image:
+        x: ""
+        _2x: ""
+
+# postup - body
+firmy_body:
   enable: true
-  title: "Experience"
-  description: "Over 15+ years of experience working with companies from all over the world. I design & develop digital products to help businesses and improve people's lives."
+  title: "Jak to probíhá"
+  description: 'Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Nam quis nulla. 
+    Curabitur bibendum justo non orci. Duis viverra diam non justo. 
+    Phasellus et lorem id felis nonummy placerat. 
+    Vestibulum erat nulla, ullamcorper nec, rutrum non, nonummy ac, erat.
+    Praesent id justo in neque elementum ultrices. Etiam neque. Proin mattis lacinia justo. 
+    Nullam sit amet magna in magna gravida vehicula.'
   button:
-    icon: "icon-linkedin-fill"
-    btnText: "Linkedin"
-    URL: "https://www.linkedin.com/company/radity/"
+    icon: "icon-smile-fill"
+    btnText: "Kontaktujte nás"
+    URL: ""
   button2:
     icon: "icon-profile-fill"
-    btnText: "Download My Resume"
+    btnText: "Více informací"
     URL: "#"
 
   items:
-    - title: "Sr. Front-End Developer"
-      company: "Radity"
-      duration: "Feb 2011 - Sep 2019"
+    - title: "1) První krok nezávislosti a úspoře"
+      company: "Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Nam quis nulla. Curabitur bibendum justo non orci. 
+      Duis viverra diam non justo. Phasellus et lorem id felis nonummy placerat.
+      Phasellus et lorem id felis nonummy placerat."
+      duration: ""
 
-    - title: "Sr. Front-End Developer"
-      company: "Textic"
-      duration: "Apr 2010 - Jan 2011"
+    - title: "2) První krok nezávislosti a úspoře"
+      company: "Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Nam quis nulla. Curabitur bibendum justo non orci. 
+      Duis viverra diam non justo. Phasellus et lorem id felis nonummy placerat.
+      Phasellus et lorem id felis nonummy placerat."
+      duration: ""
 
-    - title: "Jr. Front-End Developer"
-      company: "Cyberse"
-      duration: "Jun 2009 - Mar 2010"
+    - title: "3) První krok nezávislosti a úspoře"
+      company: "Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Nam quis nulla. Curabitur bibendum justo non orci. 
+      Duis viverra diam non justo. Phasellus et lorem id felis nonummy placerat.
+      Phasellus et lorem id felis nonummy placerat."
+      duration: ""
 
-# Client & Work
+    - title: "4) První krok nezávislosti a úspoře"
+      company: "Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Nam quis nulla. Curabitur bibendum justo non orci. 
+      Duis viverra diam non justo. Phasellus et lorem id felis nonummy placerat.
+      Phasellus et lorem id felis nonummy placerat."
+      duration: ""
+
+    - title: "5) První krok nezávislosti a úspoře"
+      company: "Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Nam quis nulla. Curabitur bibendum justo non orci. 
+      Duis viverra diam non justo. Phasellus et lorem id felis nonummy placerat.
+      Phasellus et lorem id felis nonummy placerat."
+      duration: ""
+
+    - title: "6) První krok nezávislosti a úspoře"
+      company: "Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Nam quis nulla. Curabitur bibendum justo non orci. 
+      Duis viverra diam non justo. Phasellus et lorem id felis nonummy placerat.
+      Phasellus et lorem id felis nonummy placerat."
+      duration: ""
+
+# domy
+domy:
+  enable: true
+  title: "Domy"
+  content: '<p class="lead">
+    Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Nam quis nulla. 
+    Curabitur bibendum justo non orci. Duis viverra diam non justo. 
+    Phasellus et lorem id felis nonummy placerat. 
+    Vestibulum erat nulla, ullamcorper nec, rutrum non, nonummy ac, erat. 
+    </p>
+    <p class="lead">
+    Praesent id justo in neque elementum ultrices. Etiam neque. Proin mattis lacinia justo. 
+    Nullam sit amet magna in magna gravida vehicula. 
+    </p>'
+  button:
+    icon: "icon-smile-fill"
+    btnText: "Kontaktujte nás"
+    URL: ""
+  image:
+    x: "img/domy/domy.png"
+    _2x: "img/domy/domy@2x.png"
+
+# nabidka
+domy_nabidka:
+  enable: true
+  title: "Příklady nabídek"
+  items:
+    - name: "výsledná cena:"
+      position: "20 000 Kč"
+      content: "Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Nam quis nulla. Curabitur bibendum justo non orci. 
+      Duis viverra diam non justo. Phasellus et lorem id felis nonummy placerat. 
+      Vestibulum erat nulla, ullamcorper nec, rutrum non, nonummy ac, erat. Praesent id justo in neque elementum ultrices. 
+      Etiam neque. Proin mattis lacinia justo."
+      image:
+        x: ""
+        _2x: ""
+
+    - name: "výsledná cena:"
+      position: "150 000 Kč"
+      content: "Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Nam quis nulla. Curabitur bibendum justo non orci. 
+      Duis viverra diam non justo. Phasellus et lorem id felis nonummy placerat. 
+      Vestibulum erat nulla, ullamcorper nec, rutrum non, nonummy ac, erat. Praesent id justo in neque elementum ultrices. 
+      Etiam neque. Proin mattis lacinia justo."
+      image:
+        x: ""
+        _2x: ""
+
+    - name: "výsledná cena:"
+      position: "600 000 Kč"
+      content: "Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Nam quis nulla. Curabitur bibendum justo non orci. 
+      Duis viverra diam non justo. Phasellus et lorem id felis nonummy placerat. 
+      Vestibulum erat nulla, ullamcorper nec, rutrum non, nonummy ac, erat. Praesent id justo in neque elementum ultrices. 
+      Etiam neque. Proin mattis lacinia justo."
+      image:
+        x: ""
+        _2x: ""
+
+# postup - body
+domy_body:
+  enable: true
+  title: "Jak to probíhá"
+  description: 'Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Nam quis nulla. 
+    Curabitur bibendum justo non orci. Duis viverra diam non justo. 
+    Phasellus et lorem id felis nonummy placerat. 
+    Vestibulum erat nulla, ullamcorper nec, rutrum non, nonummy ac, erat.
+    Praesent id justo in neque elementum ultrices. Etiam neque. Proin mattis lacinia justo. 
+    Nullam sit amet magna in magna gravida vehicula.'
+  button:
+    icon: "icon-smile-fill"
+    btnText: "Kontaktujte nás"
+    URL: ""
+  button2:
+    icon: "icon-profile-fill"
+    btnText: "Více informací"
+    URL: "#"
+
+  items:
+    - title: "1) První krok nezávislosti a úspoře"
+      company: "Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Nam quis nulla. Curabitur bibendum justo non orci. 
+      Duis viverra diam non justo. Phasellus et lorem id felis nonummy placerat.
+      Phasellus et lorem id felis nonummy placerat."
+      duration: ""
+
+    - title: "2) První krok nezávislosti a úspoře"
+      company: "Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Nam quis nulla. Curabitur bibendum justo non orci. 
+      Duis viverra diam non justo. Phasellus et lorem id felis nonummy placerat.
+      Phasellus et lorem id felis nonummy placerat."
+      duration: ""
+
+    - title: "3) První krok nezávislosti a úspoře"
+      company: "Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Nam quis nulla. Curabitur bibendum justo non orci. 
+      Duis viverra diam non justo. Phasellus et lorem id felis nonummy placerat.
+      Phasellus et lorem id felis nonummy placerat."
+      duration: ""
+
+    - title: "4) První krok nezávislosti a úspoře"
+      company: "Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Nam quis nulla. Curabitur bibendum justo non orci. 
+      Duis viverra diam non justo. Phasellus et lorem id felis nonummy placerat.
+      Phasellus et lorem id felis nonummy placerat."
+      duration: ""
+
+    - title: "5) První krok nezávislosti a úspoře"
+      company: "Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Nam quis nulla. Curabitur bibendum justo non orci. 
+      Duis viverra diam non justo. Phasellus et lorem id felis nonummy placerat.
+      Phasellus et lorem id felis nonummy placerat."
+      duration: ""
+
+    - title: "6) První krok nezávislosti a úspoře"
+      company: "Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Nam quis nulla. Curabitur bibendum justo non orci. 
+      Duis viverra diam non justo. Phasellus et lorem id felis nonummy placerat.
+      Phasellus et lorem id felis nonummy placerat."
+      duration: ""
+
+
+# Klienti
 client_and_work:
-  title: "Clients & Works"
+  title: "Naši klienti"
   enable: true
 
   clients:
@@ -151,92 +304,66 @@ client_and_work:
       alt: "Ztos"
 
   works:
-    - title: "Radity Finance - UI Kit"
-      description: "We have been receiving a lot of requests for a Finance Kit recently due to the popularity of Fintech."
+    - title: "První dobrý ryto"
+      description: "Tady jsme toho udělali hodně, a strašně moc ušetřili, jsou z nás nadšení. Všichni velmi chválili, a nechtěli by nikdy nikdo a nic jiného. Chcete taky?"
       button:
         icon: "icon-arrow-right"
-        btnText: "Case Study"
+        btnText: "Kontaktujte nás"
         URL: "#"
       image:
         x: "img/works/radity-finance.jpg"
         _2x: "img/works/radity-finance@2x.jpg"
       is_even: true
 
-    - title: "Swiss Fintech Website"
-      description: "The Swiss Finance + Technology Association is the leading FinTech hub in Switzerland."
+    - title: "Druhý dobrý ryto"
+      description: "Tady jsme toho udělali hodně, a strašně moc ušetřili, jsou z nás nadšení. Všichni velmi chválili, a nechtěli by nikdy nikdo a nic jiného. Chcete taky?"
       button:
         icon: "icon-arrow-right"
-        btnText: "Case Study"
+        btnText: "Kontaktujte nás"
         URL: "#"
       image:
         x: "img/works/swissfintech.jpg"
         _2x: "img/works/swissfintech@2x.jpg"
       is_even: false
 
-    - title: "Robo Advisor"
-      description: "Robo Advisor is a Swiss Wealth Manager and wants to create the best digital experience for its UNHW clients across the world. We started with a whiteboard."
+    - title: "Třetí dobrý ryto"
+      description: "Tady jsme toho udělali hodně, a strašně moc ušetřili, jsou z nás nadšení. Všichni velmi chválili, a nechtěli by nikdy nikdo a nic jiného. Chcete taky?"
       button:
         icon: "icon-arrow-right"
-        btnText: "Case Study"
+        btnText: "Kontaktujte nás"
         URL: "#"
       image:
         x: "img/works/robo-advisor.jpg"
         _2x: "img/works/robo-advisor@2x.jpg"
       is_even: true
 
-# testimonial
-testimonial:
-  enable: true
-  title: "Testimonials"
-  items:
-    - name: "Daniel Jordan"
-      position: "Phonet, CEO"
-      content: "Cold calling can be a great way to generate quality leads. You get to speak to the gatekeepers and stakeholders, and you get a great insight into their requirements and influences. But cold calling is an art-form. It can be daunting, it’s always a lot of work, and you always need to make a good impression."
-      image:
-        x: "img/testimonials/daniel-jordan.jpg"
-        _2x: "img/testimonials/daniel-jordan@2x.jpg"
-
-    - name: "Jonathan Peters"
-      position: "Textic, CEO"
-      content: "Whether you or your loved one is encountering the natural decrease in mobility that occurs with the passing of time, or deals with an illness-related lack of physical agility, a stair lift can be the ideal way to put you in charge of your home again. Regardless of the shape or make of your living accommodation."
-      image:
-        x: "img/testimonials/jonathan-peters.jpg"
-        _2x: "img/testimonials/jonathan-peters@2x.jpg"
-
-    - name: "Antonio Willis"
-      position: "Cyberse, CEO"
-      content: "In this digital generation where information can be easily obtained within seconds, business cards still have retained their importance in the achievement of increased business exposure and business sales. If your business already has a bunch of printed cards distributed to a number of potential customers and yet."
-      image:
-        x: "img/testimonials/antonio-willis.jpg"
-        _2x: "img/testimonials/antonio-willis@2x.jpg"
-
 # contact
 contact:
   enable: true
-  title: "Contact"
+  title: "Kontakt"
   form:
     method: "POST"
     action: "#"
-    full_name: "Full Name"
-    email: "Email Address"
-    message: "Type Your Message Here"
+    full_name: "Jméno a příjméní"
+    email: "Emailová adresa"
+    message: "Vaše zpráva"
   phone:
-    title: "Phone Number"
-    number: "+41 (44) 505 10 99"
+    title: "Telefonní číslo"
+    number: "+420 603 447 727"
   email:
     title: "Email"
-    email: '<a href="mailto:team@radity.com">team@radity.com</a>'
+    email: '<a href="mailto:team@radity.com">solarni@mise.cz</a>'
   address:
-    title: "Address"
-    address: "Radity GmbH<br />Max-Bill-Platz 5, 8050 Zürich"
+    title: "Adresa"
+    address: "Solární mise s.r.o.<br />Dlouhá 123, 120 00 Hradec Králové"
   button:
     icon: "icon-mail-fill"
-    btnText: "Send Message"
+    btnText: "Odeslat zprávu"
 
 # newsletter
 newsletter:
   enable: true
-  title: "Newsletter subscription"
+  title: "Máme se ozvat my Vám?"
   success_message: "Successfully subscribed"
   error_message: "Error while subscribing."
-  note: "We'll never share your email with anyone else."
+  note: "Vaše kontaktní informace s nikým dalším nesdílíme."
