draft 3 (text complete, logo changes)

--- a/config.toml
+++ b/config.toml
@@ -64,8 +64,8 @@ theme = "raditian-free-hugo-theme"
   googleTagManagerID = "GTM-000000" # Google Analytics works with Google Tag Manager
 
   [params.logo]
-    text1 = "Andreas"
-    text2 = "Ellure"
+    text1 = "SOLÁRNÍ MISE"
+    text2 = "__"
 
   [params.footer]
       copyright = "Created by: Ondřej Baše"
