draft 10 (text changes)

--- a/data/homepage.yml
+++ b/data/homepage.yml
@@ -139,13 +139,13 @@ domy:
     </p>
     <p class="lead">
     Jsme jediná realizační společnost v ČR, která má špičkově vymyšlené řízení spolupráce mezi elektrárnou a tepelným čerpadlem za účelem maximální efektivity. 
-    Z 1kw vyrobené ze slunce máte 4kW v teple. Umíme zajistit 400% zisk!
+    Z 1kW vyrobené ze slunce máte 4kW v teple. Umíme zajistit 400% zisk!
     </p>
     <p class="lead">
     Zajistíme dotace, a pokud bude potřeba, tak i financování Vaší nové elektrárny. 
-    S námi máte záruku až 30 let na výkonu FVE, až 20 let na fotovoltaické panely a 10 let na střídač a bateriový systém. 
+    S námi máte záruku <u><b>až 30 let</b></u> na výkonu FVE, <u><b>až 20 let</b></u> na fotovoltaické panely a <u><b>10 let</b></u> na střídač a bateriový systém. 
     Máme tým s dlouholetými zkušenostmi a spolupracujeme s ověřenými dodavateli kvalitních technologií. 
-    Nainstalovali jsem již přes 110 elektráren s celkovým výkonem přes 12.000 kWp (12 mWp), a to je opravdu velký výkon!
+    Nainstalovali jsme elektrárny s celkovým výkonem přes 12.000 kWp (12 mWp), a to je opravdu velký výkon!
     </p>
     <p class="lead">
     Přebytečná elektřina vyrobená z Vaší elektrárny která se nespotřebuje lze využít například k nahřátí vody, vytopení domácnosti nebo uložení do baterie na později.  
